codigoPLY/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BRACE
    BREAK
    COLCH
    COLON
    CONCAT
    DIF
    DOT
    DUALCOLON
    EXPO
    IN
    PERCENTUAL
    RBRACE
    RCOLCH
    REPEAT
    SEMICOLON
    TAG
    UNTIL
    VARARGS

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     program -> empty
Rule 3     statements -> statement statements
Rule 4     statements -> statement
Rule 5     statement -> FUNCTION NAME LPAREN parameters RPAREN statements END
Rule 6     statement -> WHILE expression DO statements END
Rule 7     statement -> FOR NAME ATRIB expression COMMA expression DO statements END
Rule 8     statement -> FOR NAME ATRIB expression COMMA expression COMMA expression DO statements END
Rule 9     statement -> IF expression THEN statements END
Rule 10    statement -> IF expression THEN statements ELSE statements END
Rule 11    statement -> IF expression THEN statements elseif_list ELSE statements END
Rule 12    statement -> IF expression THEN statements elseif_list END
Rule 13    elseif_list -> elseif_list ELSEIF expression THEN statements
Rule 14    elseif_list -> empty
Rule 15    empty -> <empty>
Rule 16    statement -> LOCAL NAME ATRIB expression
Rule 17    statement -> NAME ATRIB expression
Rule 18    statement -> PRINT LPAREN expression RPAREN
Rule 19    statement -> RETURN expression
Rule 20    statement -> function_call
Rule 21    parameters -> NAME COMMA parameters
Rule 22    parameters -> NAME
Rule 23    parameters -> <empty>
Rule 24    arguments -> expression COMMA arguments
Rule 25    arguments -> expression
Rule 26    arguments -> <empty>
Rule 27    expression -> MINUS expression
Rule 28    expression -> NOT expression
Rule 29    expression -> expression PLUS expression
Rule 30    expression -> expression MINUS expression
Rule 31    expression -> expression TIMES expression
Rule 32    expression -> expression DIVIDE expression
Rule 33    expression -> expression EQUALS expression
Rule 34    expression -> expression LTEQUALS expression
Rule 35    expression -> expression GTEQUALS expression
Rule 36    expression -> expression LT expression
Rule 37    expression -> expression GT expression
Rule 38    expression -> expression AND expression
Rule 39    expression -> expression OR expression
Rule 40    expression -> function_call
Rule 41    function_call -> NAME LPAREN arguments RPAREN
Rule 42    expression -> NUMBER
Rule 43    expression -> STRING
Rule 44    expression -> NAME
Rule 45    expression -> TRUE
Rule 46    expression -> FALSE
Rule 47    expression -> NIL

Terminals, with rules where they appear

AND                  : 38
ATRIB                : 7 8 16 17
BRACE                : 
BREAK                : 
COLCH                : 
COLON                : 
COMMA                : 7 8 8 21 24
CONCAT               : 
DIF                  : 
DIVIDE               : 32
DO                   : 6 7 8
DOT                  : 
DUALCOLON            : 
ELSE                 : 10 11
ELSEIF               : 13
END                  : 5 6 7 8 9 10 11 12
EQUALS               : 33
EXPO                 : 
FALSE                : 46
FOR                  : 7 8
FUNCTION             : 5
GT                   : 37
GTEQUALS             : 35
IF                   : 9 10 11 12
IN                   : 
LOCAL                : 16
LPAREN               : 5 18 41
LT                   : 36
LTEQUALS             : 34
MINUS                : 27 30
NAME                 : 5 7 8 16 17 21 22 41 44
NIL                  : 47
NOT                  : 28
NUMBER               : 42
OR                   : 39
PERCENTUAL           : 
PLUS                 : 29
PRINT                : 18
RBRACE               : 
RCOLCH               : 
REPEAT               : 
RETURN               : 19
RPAREN               : 5 18 41
SEMICOLON            : 
STRING               : 43
TAG                  : 
THEN                 : 9 10 11 12 13
TIMES                : 31
TRUE                 : 45
UNTIL                : 
VARARGS              : 
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

arguments            : 24 41
elseif_list          : 11 12 13
empty                : 2 14
expression           : 6 7 7 8 8 8 9 10 11 12 13 16 17 18 19 24 25 27 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39
function_call        : 20 40
parameters           : 5 21
program              : 0
statement            : 3 4
statements           : 1 3 5 6 7 8 9 10 10 11 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) program -> . empty
    (3) statements -> . statement statements
    (4) statements -> . statement
    (15) empty -> .
    (5) statement -> . FUNCTION NAME LPAREN parameters RPAREN statements END
    (6) statement -> . WHILE expression DO statements END
    (7) statement -> . FOR NAME ATRIB expression COMMA expression DO statements END
    (8) statement -> . FOR NAME ATRIB expression COMMA expression COMMA expression DO statements END
    (9) statement -> . IF expression THEN statements END
    (10) statement -> . IF expression THEN statements ELSE statements END
    (11) statement -> . IF expression THEN statements elseif_list ELSE statements END
    (12) statement -> . IF expression THEN statements elseif_list END
    (16) statement -> . LOCAL NAME ATRIB expression
    (17) statement -> . NAME ATRIB expression
    (18) statement -> . PRINT LPAREN expression RPAREN
    (19) statement -> . RETURN expression
    (20) statement -> . function_call
    (41) function_call -> . NAME LPAREN arguments RPAREN

    $end            reduce using rule 15 (empty -> .)
    FUNCTION        shift and go to state 5
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    IF              shift and go to state 9
    LOCAL           shift and go to state 10
    NAME            shift and go to state 6
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12

    program                        shift and go to state 1
    statements                     shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    function_call                  shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (3) statements -> statement . statements
    (4) statements -> statement .
    (3) statements -> . statement statements
    (4) statements -> . statement
    (5) statement -> . FUNCTION NAME LPAREN parameters RPAREN statements END
    (6) statement -> . WHILE expression DO statements END
    (7) statement -> . FOR NAME ATRIB expression COMMA expression DO statements END
    (8) statement -> . FOR NAME ATRIB expression COMMA expression COMMA expression DO statements END
    (9) statement -> . IF expression THEN statements END
    (10) statement -> . IF expression THEN statements ELSE statements END
    (11) statement -> . IF expression THEN statements elseif_list ELSE statements END
    (12) statement -> . IF expression THEN statements elseif_list END
    (16) statement -> . LOCAL NAME ATRIB expression
    (17) statement -> . NAME ATRIB expression
    (18) statement -> . PRINT LPAREN expression RPAREN
    (19) statement -> . RETURN expression
    (20) statement -> . function_call
    (41) function_call -> . NAME LPAREN arguments RPAREN

    $end            reduce using rule 4 (statements -> statement .)
    END             reduce using rule 4 (statements -> statement .)
    ELSE            reduce using rule 4 (statements -> statement .)
    ELSEIF          reduce using rule 4 (statements -> statement .)
    FUNCTION        shift and go to state 5
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    IF              shift and go to state 9
    LOCAL           shift and go to state 10
    NAME            shift and go to state 6
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12

    statement                      shift and go to state 4
    statements                     shift and go to state 14
    function_call                  shift and go to state 13

state 5

    (5) statement -> FUNCTION . NAME LPAREN parameters RPAREN statements END

    NAME            shift and go to state 15


state 6

    (17) statement -> NAME . ATRIB expression
    (41) function_call -> NAME . LPAREN arguments RPAREN

    ATRIB           shift and go to state 16
    LPAREN          shift and go to state 17


state 7

    (6) statement -> WHILE . expression DO statements END
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . expression LTEQUALS expression
    (35) expression -> . expression GTEQUALS expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . function_call
    (42) expression -> . NUMBER
    (43) expression -> . STRING
    (44) expression -> . NAME
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NIL
    (41) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NIL             shift and go to state 27

    expression                     shift and go to state 18
    function_call                  shift and go to state 21

state 8

    (7) statement -> FOR . NAME ATRIB expression COMMA expression DO statements END
    (8) statement -> FOR . NAME ATRIB expression COMMA expression COMMA expression DO statements END

    NAME            shift and go to state 28


state 9

    (9) statement -> IF . expression THEN statements END
    (10) statement -> IF . expression THEN statements ELSE statements END
    (11) statement -> IF . expression THEN statements elseif_list ELSE statements END
    (12) statement -> IF . expression THEN statements elseif_list END
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . expression LTEQUALS expression
    (35) expression -> . expression GTEQUALS expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . function_call
    (42) expression -> . NUMBER
    (43) expression -> . STRING
    (44) expression -> . NAME
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NIL
    (41) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NIL             shift and go to state 27

    expression                     shift and go to state 29
    function_call                  shift and go to state 21

state 10

    (16) statement -> LOCAL . NAME ATRIB expression

    NAME            shift and go to state 30


state 11

    (18) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 31


state 12

    (19) statement -> RETURN . expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . expression LTEQUALS expression
    (35) expression -> . expression GTEQUALS expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . function_call
    (42) expression -> . NUMBER
    (43) expression -> . STRING
    (44) expression -> . NAME
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NIL
    (41) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NIL             shift and go to state 27

    expression                     shift and go to state 32
    function_call                  shift and go to state 21

state 13

    (20) statement -> function_call .

    FUNCTION        reduce using rule 20 (statement -> function_call .)
    WHILE           reduce using rule 20 (statement -> function_call .)
    FOR             reduce using rule 20 (statement -> function_call .)
    IF              reduce using rule 20 (statement -> function_call .)
    LOCAL           reduce using rule 20 (statement -> function_call .)
    NAME            reduce using rule 20 (statement -> function_call .)
    PRINT           reduce using rule 20 (statement -> function_call .)
    RETURN          reduce using rule 20 (statement -> function_call .)
    $end            reduce using rule 20 (statement -> function_call .)
    END             reduce using rule 20 (statement -> function_call .)
    ELSE            reduce using rule 20 (statement -> function_call .)
    ELSEIF          reduce using rule 20 (statement -> function_call .)


state 14

    (3) statements -> statement statements .

    $end            reduce using rule 3 (statements -> statement statements .)
    END             reduce using rule 3 (statements -> statement statements .)
    ELSE            reduce using rule 3 (statements -> statement statements .)
    ELSEIF          reduce using rule 3 (statements -> statement statements .)


state 15

    (5) statement -> FUNCTION NAME . LPAREN parameters RPAREN statements END

    LPAREN          shift and go to state 33


state 16

    (17) statement -> NAME ATRIB . expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . expression LTEQUALS expression
    (35) expression -> . expression GTEQUALS expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . function_call
    (42) expression -> . NUMBER
    (43) expression -> . STRING
    (44) expression -> . NAME
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NIL
    (41) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NIL             shift and go to state 27

    expression                     shift and go to state 34
    function_call                  shift and go to state 21

state 17

    (41) function_call -> NAME LPAREN . arguments RPAREN
    (24) arguments -> . expression COMMA arguments
    (25) arguments -> . expression
    (26) arguments -> .
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . expression LTEQUALS expression
    (35) expression -> . expression GTEQUALS expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . function_call
    (42) expression -> . NUMBER
    (43) expression -> . STRING
    (44) expression -> . NAME
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NIL
    (41) function_call -> . NAME LPAREN arguments RPAREN

    RPAREN          reduce using rule 26 (arguments -> .)
    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NIL             shift and go to state 27

    arguments                      shift and go to state 35
    expression                     shift and go to state 36
    function_call                  shift and go to state 21

state 18

    (6) statement -> WHILE expression . DO statements END
    (29) expression -> expression . PLUS expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . TIMES expression
    (32) expression -> expression . DIVIDE expression
    (33) expression -> expression . EQUALS expression
    (34) expression -> expression . LTEQUALS expression
    (35) expression -> expression . GTEQUALS expression
    (36) expression -> expression . LT expression
    (37) expression -> expression . GT expression
    (38) expression -> expression . AND expression
    (39) expression -> expression . OR expression

    DO              shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    EQUALS          shift and go to state 42
    LTEQUALS        shift and go to state 43
    GTEQUALS        shift and go to state 44
    LT              shift and go to state 45
    GT              shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 19

    (27) expression -> MINUS . expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . expression LTEQUALS expression
    (35) expression -> . expression GTEQUALS expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . function_call
    (42) expression -> . NUMBER
    (43) expression -> . STRING
    (44) expression -> . NAME
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NIL
    (41) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NIL             shift and go to state 27

    expression                     shift and go to state 49
    function_call                  shift and go to state 21

state 20

    (28) expression -> NOT . expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression TIMES expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . expression LTEQUALS expression
    (35) expression -> . expression GTEQUALS expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . function_call
    (42) expression -> . NUMBER
    (43) expression -> . STRING
    (44) expression -> . NAME
    (45) expression -> . TRUE
    (46) expression -> . FALSE
    (47) expression -> . NIL
    (41) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NIL             shift and go to state 27

    expression                     shift and go to state 50
    function_call                  shift and go to state 21

state 21

    (40) expression -> function_call .

    DO              reduce using rule 40 (expression -> function_call .)
    PLUS            reduce using rule 40 (expression -> function_call .)
    MINUS           reduce using rule 40 (expression -> function_call .)
    TIMES           reduce using rule 40 (expression -> function_call .)
    DIVIDE          reduce using rule 40 (expression -> function_call .)
    EQUALS          reduce using rule 40 (expression -> function_call .)
    LTEQUALS        reduce using rule 40 (expression -> function_call .)
    GTEQUALS        reduce using rule 40 (expression -> function_call .)
    LT              reduce using rule 40 (expression -> function_call .)
    GT              reduce using rule 40 (expression -> function_call .)
    AND             reduce using rule 40 (expression -> function_call .)
    OR              reduce using rule 40 (expression -> function_call .)
    THEN            reduce using rule 40 (expression -> function_call .)
    FUNCTION        reduce using rule 40 (expression -> function_call .)
    WHILE           reduce using rule 40 (expression -> function_call .)
    FOR             reduce using rule 40 (expression -> function_call .)
    IF              reduce using rule 40 (expression -> function_call .)
    LOCAL           reduce using rule 40 (expression -> function_call .)
    NAME            reduce using rule 40 (expression -> function_call .)
    PRINT           reduce using rule 40 (expression -> function_call .)
    RETURN          reduce using rule 40 (expression -> function_call .)
    $end            reduce using rule 40 (expression -> function_call .)
    END             reduce using rule 40 (expression -> function_call .)
    ELSE            reduce using rule 40 (expression -> function_call .)
    ELSEIF          reduce using rule 40 (expression -> function_call .)
    COMMA           reduce using rule 40 (expression -> function_call .)
    RPAREN          reduce using rule 40 (expression -> function_call .)


state 22

    (42) expression -> NUMBER .

    DO              reduce using rule 42 (expression -> NUMBER .)
    PLUS            reduce using rule 42 (expression -> NUMBER .)
    MINUS           reduce using rule 42 (expression -> NUMBER .)
    TIMES           reduce using rule 42 (expression -> NUMBER .)
    DIVIDE          reduce using rule 42 (expression -> NUMBER .)
    EQUALS          reduce using rule 42 (expression -> NUMBER .)
    LTEQUALS        reduce using rule 42 (expression -> NUMBER .)
    GTEQUALS        reduce using rule 42 (expression -> NUMBER .)
    LT              reduce using rule 42 (expression -> NUMBER .)
    GT              reduce using rule 42 (expression -> NUMBER .)
    AND             reduce using rule 42 (expression -> NUMBER .)
    OR              reduce using rule 42 (expression -> NUMBER .)
    THEN            reduce using rule 42 (expression -> NUMBER .)
    FUNCTION        reduce using rule 42 (expression -> NUMBER .)
    WHILE           reduce using rule 42 (expression -> NUMBER .)
    FOR             reduce using rule 42 (expression -> NUMBER .)
    IF              reduce using rule 42 (expression -> NUMBER .)
    LOCAL           reduce using rule 42 (expression -> NUMBER .)
    NAME            reduce using rule 42 (expression -> NUMBER .)
    PRINT           reduce using rule 42 (expression -> NUMBER .)
    RETURN          reduce using rule 42 (expression -> NUMBER .)
    $end            reduce using rule 42 (expression -> NUMBER .)
    END             reduce using rule 42 (expression -> NUMBER .)
    ELSE            reduce using rule 42 (expression -> NUMBER .)
    ELSEIF          reduce using rule 42 (expression -> NUMBER .)
    COMMA           reduce using rule 42 (expression -> NUMBER .)
    RPAREN          reduce using rule 42 (expression -> NUMBER .)


state 23

    (43) expression -> STRING .

    DO              reduce using rule 43 (expression -> STRING .)
    PLUS            reduce using rule 43 (expression -> STRING .)
    MINUS           reduce using rule 43 (expression -> STRING .)
    TIMES           reduce using rule 43 (expression -> STRING .)
    DIVIDE          reduce using rule 43 (expression -> STRING .)
    EQUALS          reduce using rule 43 (expression -> STRING .)
    LTEQUALS        reduce using rule 43 (expression -> STRING .)
    GTEQUALS        reduce using rule 43 (expression -> STRING .)
    LT              reduce using rule 43 (expression -> STRING .)
    GT              reduce using rule 43 (expression -> STRING .)
    AND             reduce using rule 43 (expression -> STRING .)
    OR              reduce using rule 43 (expression -> STRING .)
    THEN            reduce using rule 43 (expression -> STRING .)
    FUNCTION        reduce using rule 43 (expression -> STRING .)
    WHILE           reduce using rule 43 (expression -> STRING .)
    FOR             reduce using rule 43 (expression -> STRING .)
    IF              reduce using rule 43 (expression -> STRING .)
    LOCAL           reduce using rule 43 (expression -> STRING .)
    NAME            reduce using rule 43 (expression -> STRING .)
    PRINT           reduce using rule 43 (expression -> STRING .)
    RETURN          reduce using rule 43 (expression -> STRING .)
    $end            reduce using rule 43 (expression -> STRING .)
    END             reduce using rule 43 (expression -> STRING .)
    ELSE            reduce using rule 43 (expression -> STRING .)
    ELSEIF          reduce using rule 43 (expression -> STRING .)
    COMMA           reduce using rule 43 (expression -> STRING .)
    RPAREN          reduce using rule 43 (expression -> STRING .)


state 24

    (44) expression -> NAME .
    (41) function_call -> NAME . LPAREN arguments RPAREN
